Fixed question jumping due to hover border

--- a/src/main.scss
+++ b/src/main.scss
@@ -45,9 +45,10 @@
     margin-bottom: 3px;
     margin-right: 7px;
   }
-  #surveyjs {
+  .svd_questions_editor {
     .svd_question {
       overflow: visible;
+      border: 1px solid transparent;
     }
   }
   #surveyjs,
